Added discord link & made the header more blacker

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<!--If you can read this, tell me how to do this better. -->
 				<br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> 
 					<h1>Stillborn</h1>
-					<p>A dark realm of ideas, where dreams go to die.<br />
+					<p>A roleplaying game with consequences.<br />
 					sabbath.online:2048</p>
 				</div>
 				<!--<video autoplay loop muted playsinline src="images/banner.mp4"></video> Remove this-->
@@ -51,6 +51,11 @@
 					<header class="special">
 						<h2 style="color:white">Stillborn is many things.</h2>
 						<p style="color:white">In a round-based experience of differing scenarios, you assume the role of a poor and unfortunate soul trying to survive.</p>
+					</header>
+					<header class="special">
+						<h2 style="color:red">DISCLAIMER:</h2>
+						<p style="color:red">Stillborn, by virtue of its medium, is capable of simulating every heinous event realistically imaginable; as well as some that are not realistically imaginable. Such exists as a side effect and as a means of making the world more grounded in truth. <br/>
+						Don't play Stillborn if you are under 18, or feel you might be negatively affected by such content in a text medium.
 					</header>
 					<div class="highlights">
 						<section>
@@ -65,10 +70,10 @@
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
-									<h3>Ante sem integer</h3>
+									<a href="https://discord.gg/pc3W44C"> <img style="margin: 25px 0px 0px 0px" border="0" alt="Discord" src="./images/icons/discord_logo.png" height="104"></a> <!-- Put this in a class -->
+									<h3>The Sabbath Discord</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>A dark realm of ideas, where dreams go to die. <br /><br /><a href="https://discord.gg/pc3W44C">Join us.</a></p>
 							</div>
 						</section>
 						<section>
@@ -139,7 +144,7 @@
 
 					</div>
 					<div class="copyright">
-						&copy; SABBATH. Graphics, Janey. Design, Pooch.
+						&copy; SABBATH. Graphics, Janey. Design, Pooch. Template, <a href="https://templated.co/license">templated.co</a>
 					</div>
 				</div>
 			</footer>
