janey's changes + patreon link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>STILLBORN: A MUD</title>
+		<title>Stillborn</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -27,8 +27,8 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="generic.html">Generic</a></li>
+					<!-- <li><a href="elements.html">Elements</a></li> -->
+					<!-- <li><a href="generic.html">Generic</a></li> -->
 				</ul>
 			</nav>
 
@@ -38,8 +38,8 @@
 				<!--If you can read this, tell me how to do this better. -->
 				<br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> 
 					<h1>Stillborn</h1>
-					<p>A roleplaying game with consequences.<br />
-					sabbath.online:2048</p>
+					<p>A roleplaying game with consequences.<br/>
+					sabbath.online:666</p>
 				</div>
 				<!--<video autoplay loop muted playsinline src="images/banner.mp4"></video> Remove this-->
 
@@ -51,6 +51,14 @@
 					<header class="special">
 						<h2 style="color:white">Stillborn is many things.</h2>
 						<p style="color:white">In a round-based experience of differing scenarios, you assume the role of a poor and unfortunate soul trying to survive.</p>
+						<p style="color:white">One can be anything based on what the running setting permits without prerequisites.</p>
+						<p style="color:white">That said, what survival means is very different between a hobo and a politician, as well as the amount of others who want you dead.</p>
+					</header>
+					<header class="special">
+						<h2 style="color:grey">"Enough bullshit, what do I do?"</h2>
+						<p style="color:grey">If you aren't familiar with MUDs or how to play them, someone at Sabbath will be happy to help you.</p>
+						<p style="color:grey">Right now authorization is manual. Speak to an administrator at the Discord server linked below.</p>
+						<p style="color:grey">This is sadly the only way to do this so far.</p>
 					</header>
 					<header class="special">
 						<h2 style="color:red">DISCLAIMER:</h2>
@@ -63,7 +71,7 @@
 								<header>
 									<h3>Newbie Guide</h3>
 								</header>
-								<p>New to the dead God's dream? Get acquainted with the setting here.</p>
+								<p>Everyone starts somewhere. Read this if you aren't familiar with MUDs.<br/><br/>Under construction.</p>
 							</div>
 						</section>
 						<section>
@@ -72,7 +80,7 @@
 									<a href="https://discord.gg/pc3W44C"> <img style="margin: 25px 0px 0px 0px" border="0" alt="Discord" src="./images/icons/discord_logo.png" height="104"></a> <!-- Put this in a class -->
 									<h3>The Sabbath Discord</h3>
 								</header>
-								<p>A dark realm of ideas, where dreams go to die. <br /><br /><a href="https://discord.gg/pc3W44C">Join us.</a></p>
+								<p>A dark realm of ideas, where dreams go to die. It's a friendly place.<br/><br/><a href="https://discord.gg/pc3W44C">Join us.</a></p>
 							</div>
 						</section>
 						<section>
@@ -80,7 +88,7 @@
 								<header>
 									<h3>Combat Guide</h3>
 								</header>
-								<p>Stillborn has a unique combat system. You can read more about it here..</p>
+								<p>Willfully or not, you'll need to kill people.<br/><br/>Under construction.</p>
 							</div>
 						</section>
 						<section>
@@ -88,15 +96,15 @@
 								<header>
 									<h3>Game Rules</h3>
 								</header>
-								<p>Your actions within the game may have ramifications outside it. Read Stillborn's rules here.</p>
+								<p>Your actions within the game may have ramifications outside it. Read the game's rules and remember we're all here to have a good time.<br/><br/>Under construction.</p>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
-									<h3>Crafting</h3>
+									<h3>Crafting Guide</h3>
 								</header>
-								<p>Learn about the intricacies of Stillborn's crafting system here.</p>
+								<p>The difference between man and beast.<br/><br/>Under construction.</p>
 							</div>
 						</section>
 						<section>
@@ -104,7 +112,7 @@
 								<header>
 									<h3>MOO Front-end</h3>
 								</header>
-								<p>Eventually, a button that leads to a front end to the MOO will be placed here.</p>
+								<p>The game itself broadcasts to the internet.<br/><br/><a href="http://sabbath.online:8080">See data, help files, ingame forums, and more.</a></p>
 							</div>
 						</section>
 					</div>
@@ -115,7 +123,7 @@
 			<section id="cta" class="wrapper">
 				<div class="inner">
 					<h2>About STILLBORN</h2>
-					<p>This MOO is powered by ... engine, and uses ... and ... . The themes within the game are not suitable for all audiences. etc.
+					<p>Stillborn uses the Stunt binary as well as code from Improvise. Stillborn began with GhostCore and has been heavily modified since. Everything from that point has been coded by mostly Jane or Sabbath's cultists.
 					</p>
 				</div>
 			</section>
@@ -125,16 +133,20 @@
 				<div class="inner">
 					<div class="content">
 						<section>
-							<h3>Disclaimer</h3>
-							<p>Stillborn is a work of fiction. Etc. Etc. Etc.</p>
+							<h3>Disclaimer #2</h3>
+							<p>Stillborn is just a game.</p>
 						</section>
 						<section>
-							<h4>Links To Inspiring Works</h4>
+							<h4>Support your right to dream!</h3>
+							<p><center><a href="https://www.patreon.com/stillborn"><img src="./images/icons/patreon_logo.png" style="width: 100px;" alt= "Patreon"></a></center></p>
+						</section>
+						<section>
+							<h4>What caused this?</h4>
 							<ul class="alt">
-								<li><a href="#">Inspirational Work #1.</a></li>
-								<li><a href="#">Inspirational Work #2.</a></li>
-								<li><a href="#">Inspirational Work #3.</a></li>
-								<li><a href="#">Inspirational Work #4.</a></li>
+								<li><a href="http://www.bay12games.com/dwarves/">Dwarf Fortress</a></li>
+								<li><a href="https://store.steampowered.com/app/248860/NEO_Scavenger/">NEO Scavenger</a></li>
+								<li><a href="http://www.cataclysmdda.com/">Cataclysm: Dark Days Ahead</a></li>
+								<li><a href="https://spacestation13.com/">Space Station 13</a></li>
 							</ul>
 						</section>
 
