made patreon logo bigger and hyperlink open in new tab

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						</section>
 						<section>
 							<h4>Support your right to dream!</h3>
-							<p><center><a href="https://www.patreon.com/stillborn"><img src="./images/icons/patreon_logo.png" style="width: 100px;" alt= "Patreon"></a></center></p>
+							<p><center><a href="https://www.patreon.com/stillborn" target="_blank"><img src="./images/icons/patreon_logo.png" style="width: 180px;" alt= "Patreon"></a></center></p>
 						</section>
 						<section>
 							<h4>What caused this?</h4>
